--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,129 +1,293 @@
-.container {
-  padding: 0 2rem;
-}
-
-.main {
+@media screen and (min-width: 768px) {
+  .mainPage {
   min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
-
-.footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
+.heroVideo {
+  max-width: 100vw;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-grow: 1;
 }
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+.heroVideo video {
+  max-width: 100%;
 }
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
+.greyScreen {
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 100%;
 }
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  margin: 4rem 0;
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
+.videoOverlay {
+  position: absolute;
+  height: 75%;
+  width: 75%;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
+  color: white;
 }
-
-.card {
-  margin: 1rem;
-  padding: 1.5rem;
+.videoTextMain{
+  margin-top: 30px;
+  width: 70%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  align-items: self-start;
+}
+.titleMain {
+  display: flex;
+  height: 30%;
+  justify-content: center;
+  align-items: center;
+}
+.videoTextMain {
+  display: flex;
+  flex-flow: column;
+}
+.videoTextMain div:first-child {
+  font-size: calc(13px + 2.5vw);
   text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  /* font-family: 'Cinzel', serif; */
+  font-family: 'Roboto Slab', serif;
+  /* font-family: 'Lato', sans-serif; */
+  /* font-weight: bold; */
+  margin-bottom: 15px;
+}
+.videoTextMain div span {
+  
+  font-size: calc(13px + 2.5vw);
+  text-align: center;
+  /* font-family: 'Cinzel', serif; */
+  /* font-family: 'Lato', sans-serif; */
+  font-family: 'Roboto Slab', serif;
+  /* font-weight: bold; */
+  /* font-style: italic; */
+  display: inline-block;
+  position: relative;
+}
+.underline {
+  width: 100%;
+  height: 1px;
+  background: rgb(255 255 255 / 70%);
+  position: absolute;
+  bottom: -10px;
+  animation: 1s ease-out 0s 1 slideIn;  
+}
+  @keyframes slideIn {
+    0% {
+width: 0px;    
+}
+    100% {
+      width: 100%
+    }
+  }
+.videoTextBody {
+font-size: calc(15px + 0.290625vw);
+/* font-family: 'Lato', sans-serif; */
+font-family: 'Poppins', sans-serif;
+margin-bottom: 20px;
+
+
+}
+.videoTextMain button {
+  width: 200px;
+  
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+.button42 {
+  overflow: visible !important;
+  background-color: initial;
+  background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+  /* color: #FFFFFF; */
+  color: black;
+  cursor: pointer;
+  display: inline-block;
+  /* font-family: 'Raleway', sans-serif; */
+  font-family: 'Poppins', sans-serif;
+  height: 40px;
+  width: 150px;
+  line-height: 40px;
+  outline: 0;
+  overflow: hidden;
+  pointer-events: auto;
+  position: relative;
+  text-align: center;
+  touch-action: manipulation;
+  user-select: none;
+  -webkit-user-select: none;
+  vertical-align: top;
+  white-space: nowrap;
+  width: 100%;
+  z-index: 9;
+  border: 0;
+  transition:  .4s;
+  font-size: 17px;
+  font-weight: bold;
+  
 }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+.button42:hover {
+  transform:
+    translate3d(0px, -5px, 0px)
+    /* rotateX(51deg) */
+    /* rotateZ(43deg) */
+    ;
+  box-shadow:
+    1px 1px 0 1px black,
+    -1px 0 28px 0 rgba(34, 33, 81, 0.01),
+    54px 54px 28px -10px rgba(34, 33, 81, 0.15);
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
-@media (max-width: 600px) {
-  .grid {
+/* :hover {
+  /* box-shadow: hsl(46deg 68% 53%) 1px 1px 4px;
+  font-size: 18px; */
+  .CMScontainer {
     width: 100%;
-    flex-direction: column;
+    height: 200px;
+    background-color: #110f0f;
+  }
+  .CMStitle {
+    height: 75px;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    font-family: 'Poppins';
+    color: white;
+    font-size: 1rem;
+  }
+  .CMSflex {
+    width: 95%;
+    height: 125px;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    align-items: center;
+  }
+  .CMSchild {
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .CMSchild img {
+    filter: brightness(0) invert(1);
+    width: 43%;
   }
 }
+@media screen and (max-width: 768px) {
+  .mainPage {
+    min-height: 100vh;
+    width: 100vw;
+  }
+  .heroVideo {
+    max-width: 100vw;
+    height: 350px;
+    position: relative;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .heroVideo video {
+    max-width: 360%;
+    overflow: hidden;
 
-@media (prefers-color-scheme: dark) {
-  .card,
-  .footer {
-    border-color: #222;
   }
-  .code {
-    background: #111;
+  .greyScreen {
+    background-color: black;
+    opacity: 0.5;
+    position: absolute;
+    top: 0%;
+    height: 100%;
+    width: 100%;
   }
-  .logo img {
-    filter: invert(1);
+  .videoOverlay {
+    position: absolute;
+    flex-flow: column;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    color: white;
+  }
+  .videoTextMain{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    align-items: self-start;
+  }
+  .videoTextMain div:first-child {
+    font-size: calc(18px + 2.5vw);
+    margin-top: 20px;
+    margin-bottom: 10px;
+    text-align: left;
+    font-family: 'Cinzel', serif;
+    /* font-family: 'Lato', sans-serif; */
+    font-weight: bold;
+  }
+  .videoTextMain div span {
+    font-size: calc(18px + 2.5vw);
+    text-align: center;
+    font-family: 'Cinzel', serif;
+    /* font-family: 'Lato', sans-serif; */
+    font-weight: bold;
+    font-style: italic;
+    display: inline-block;
+    position: relative;
+  }
+  .underline {
+    width: 100%;
+    height: 1px;
+    background: rgb(255 255 255 / 70%);
+    position: absolute;
+    bottom: -14px;
+    animation: 1s ease-out 0s 1 slideIn;  }
+  @keyframes slideIn {
+    0% {
+width: 0px;    
+}
+    100% {
+      width: 100%
+    }
+  }
+  .videoTextBody {
+  font-size: calc(13px + 0.290625vw);
+  margin-bottom: 30px;
+  font-family: 'Lato', sans-serif;
+
+  }
+  .button42 {
+    background-color: initial;
+    background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));  border-radius: 6px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
+    /* color: #FFFFFF; */
+    color: black;
+    cursor: pointer;
+    display: inline-block;
+    font-family: 'Lato', sans-serif;
+    height: 40px;
+    width: 150px;
+    line-height: 40px;
+    outline: 0;
+    overflow: hidden;
+    pointer-events: auto;
+    position: relative;
+    text-align: center;
+    touch-action: manipulation;
+    user-select: none;
+    -webkit-user-select: none;
+    vertical-align: top;
+    white-space: nowrap;
+    width: 100%;
+    z-index: 9;
+    border: 0;
+    transition:  .4s;
+    font-size: 15px;
+    font-weight: bold;
+    
   }
 }
