--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
         display: none;
     }
     .navMain {
-    height: 100px;
+    height: 75px;
     border-bottom: 0.5px solid grey;
     box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
     background: #110f0f;
@@ -69,8 +69,17 @@
 }
 }
 @media screen and (max-width: 768px) {
-    .navLogo {
+    /* .navLogo {
         display: none;
+    } */
+    .navLogo {
+      width: 160px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .navLogo img{
+      width: 100%;
     }
     .navItems {
         display: none;
@@ -82,7 +91,8 @@
         height: 50px;
         border-bottom: 0.5px solid grey;
         box-shadow: 0 2px 2px -2px rgba(0,0,0,.2);
-        background: #231f20;
+        /* background: #231f20; */
+        background-color: #110f0f;
         width: 100vw;
         display: flex;
     }
@@ -95,14 +105,16 @@
         width: 150px;
         transition: width 1s;
         height: 100vh;
-        background-color: #231f20;
+        /* background-color: #231f20; */
+        background-color: #110f0f;
         z-index: 1000;
     }
     .mobileNavItemsInactive {
         transition: width 1s;
         width: 50px;
         height: 100%;
-        background-color: #231f20;
+        /* background-color: #231f20; */
+        background-color: #110f0f;
     }
     .menuLine1 {
         margin-top: 10px;
