--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -1,38 +1,108 @@
 .mainContainer {
-  /* background: hsl(0deg 0% 42%); */
-}
+  background: #eeece6;
+  border-bottom: 1px solid #e6ecf8;
+  padding-bottom: 40px;
+  /* background-image: url("https://i8.amplience.net/i/jpl/shutterstock-725746873-2-4fde3fb3c0c7eb865b5f30f803038552"); */
+  /* background-image: url("https://i8.amplience.net/i/jpl/shutterstock-1019995999-35ae143f0631f44931d50ce38e17c244");
+  background-size: cover; */
+  position: relative;
 
+  border-bottom: 1px ridge #cfcece;
+
+}
+/* .greyScreen {
+  background-color: black;
+  opacity: 0.5;
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+} */
 .title {
+  margin: 0 auto;
     width: 100%;
     height: auto;
-    margin: 35px 0;
+    padding-top: 35px;
+    margin-bottom: 25px;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2rem;
+    font-size: 2.2rem;
+    /* font-weight: bolder; */
 color: black;
-font-family: 'Roboto Slab', serif;}
+/* font-family: 'Roboto Slab', serif; */
+font-family: 'Montserrat', sans-serif;
+position: relative;
+width: fit-content;
+}
 .subTitle {
   text-align: center;
-  color: #808080 !important;
-  margin-bottom: 35px;
+  font-size: 14px;
+  color: grey;
+  margin-bottom: 65px;
+  font-family: 'Poppins';
+  /* font-family: 'Montserrat', sans-serif; */
+}
+@media screen and (max-width: 768px) {
+  .subTitle {
+    width: 90%;
+    margin: 0 auto;
+    margin-bottom: 65px;
+  }
+}
+.underline {
+  position: absolute;
+  width: 80%;
+  height: 1px;
+  background-color: black;
+  bottom: -12%;
+  left: 10%;
 }
 .servicesMain {
     width: 95%;
     margin: 0 auto;
-    height: 500px;
+    height: auto;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
 }
 .servicesMainCard {
-    height: 350px;
+    height: 290px;
     width: 32%;
 }
-.titleSection {
+@media screen and (max-width: 768px) {
+  .servicesMainCard {
+    width: 45%;
+    margin-bottom: 25px;
+  }
+  .servicesMainCard img { 
+    z-index: 2;
+  }
+  /* .shadowBottom {
+    height: 83px;
+    width: 87px;
+    border-radius: 58%;
+    bottom: -3px;
+    position: absolute;
+    background-color: white;
+    z-index: 0;
+  }
+  .shadowTop {
     height: 75px;
     width: 75px;
-    background: #35d2d7;
+    border-radius: 58%;
+    bottom: 0;
+    position: absolute;
+    background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));
+    z-index: 1;
+  } */
+}
+.titleSection {
+  position: relative;
+    height: 75px;
+    width: 75px;
+    /* background: #35d2d7; */
+    background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));
     border-radius: 58%;
     margin: 0 auto;
     display: flex;
