--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,12 +28,20 @@
   color: white;
 }
 .videoTextMain{
-  margin-top: 30px;
   width: 70%;
   height: 100%;
   display: flex;
   flex-flow: column;
   align-items: self-start;
+  animation-name: fadeRight;
+  animation-duration: 1.9s;
+  animation-iteration-count: 1;
+}
+@keyframes fadeRight {
+  from {
+    opacity: 0;
+  }
+  to {opacity: 1;}
 }
 .titleMain {
   display: flex;
@@ -41,28 +49,31 @@
   justify-content: center;
   align-items: center;
 }
+/* .titleMain div {
+  font-weight: bolder;
+  letter-spacing: 0.05em;
+} */
 .videoTextMain {
   display: flex;
   flex-flow: column;
 }
 .videoTextMain div:first-child {
-  font-size: calc(13px + 2.5vw);
+  font-size: calc(13px + 3vw);
   text-align: left;
   /* font-family: 'Cinzel', serif; */
-  font-family: 'Roboto Slab', serif;
+  /* font-family: 'Roboto Slab', serif; */
   /* font-family: 'Lato', sans-serif; */
   /* font-weight: bold; */
+  font-family: 'Montserrat', sans-serif;
   margin-bottom: 15px;
+  line-height: 1.1em;
 }
 .videoTextMain div span {
   
-  font-size: calc(13px + 2.5vw);
+  font-size: calc(13px + 3vw);
   text-align: center;
-  /* font-family: 'Cinzel', serif; */
-  /* font-family: 'Lato', sans-serif; */
-  font-family: 'Roboto Slab', serif;
-  /* font-weight: bold; */
-  /* font-style: italic; */
+  /* font-family: 'Roboto Slab', serif; */
+  font-family: 'Montserrat', sans-serif;
   display: inline-block;
   position: relative;
 }
@@ -70,8 +81,9 @@
   width: 100%;
   height: 1px;
   background: rgb(255 255 255 / 70%);
+  /* background: #be9c28; */
   position: absolute;
-  bottom: -14px;
+  bottom: -17px;
   animation: 1s ease-out 0s 1 slideIn;  
 }
   @keyframes slideIn {
@@ -86,7 +98,7 @@ width: 0px;
 font-size: calc(15px + 0.290625vw);
 /* font-family: 'Lato', sans-serif; */
 font-family: 'Poppins', sans-serif;
-margin-bottom: 20px;
+margin-bottom: 2.5em;
 
 
 }
@@ -94,7 +106,10 @@ margin-bottom: 20px;
   width: 200px;
   
 }
-
+.button42 a {
+  text-decoration: none;
+  color: black;
+}
 .button42 {
   overflow: visible !important;
   background-color: initial;
@@ -158,23 +173,36 @@ margin-bottom: 20px;
     font-size: 1rem;
   }
   .CMSflex {
-    width: 95%;
+    width: 100vw;
+    /* overflow: scroll; */
     height: 125px;
     margin: 0 auto;
     display: flex;
     flex-flow: row;
     justify-content: space-around;
     align-items: center;
+    animation-name: uspAnimation;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
   }
+  @keyframes uspAnimation {
+    0% {
+        margin-left: 0%;
+    }
+    100% {
+        margin-left: calc(-75vw);
+    }
+}
   .CMSchild {
-    width: 25%;
+    min-width: 25%;
     display: flex;
     justify-content: center;
     align-items: center;
   }
   .CMSchild img {
     filter: brightness(0) invert(1);
-    width: 120px;
+    width: calc(10px + 10vw);
   }
   .contentBreakContainer {
     background-color: grey;
@@ -208,6 +236,9 @@ margin-bottom: 20px;
     height: 100%;
     width: 100%;
   }
+  .titleMain div:first-child {
+    margin-bottom: 5px !important;
+  }
   .videoOverlay {
     position: absolute;
     flex-flow: column;
@@ -218,28 +249,28 @@ margin-bottom: 20px;
     color: white;
   }
   .videoTextMain{
-    width: 70%;
+    width: 80%;
     height: 100%;
     display: flex;
     flex-flow: column;
     align-items: self-start;
   }
   .videoTextMain div:first-child {
-    font-size: calc(18px + 2.5vw);
+    font-size: calc(23px + 2.5vw);
     margin-top: 20px;
     margin-bottom: 10px;
     text-align: left;
-    font-family: 'Cinzel', serif;
+    /* font-family: 'Roboto Slab', serif; */
+    font-family: 'Montserrat', sans-serif;
     /* font-family: 'Lato', sans-serif; */
-    font-weight: bold;
+    font-weight: light;
   }
   .videoTextMain div span {
-    font-size: calc(18px + 2.5vw);
+    font-size: calc(23px + 2.5vw);
     text-align: center;
-    font-family: 'Cinzel', serif;
-    /* font-family: 'Lato', sans-serif; */
-    font-weight: bold;
-    font-style: italic;
+    /* font-family: 'Roboto Slab', serif; */
+    font-family: 'Montserrat', sans-serif;
+    color: white;
     display: inline-block;
     position: relative;
   }
@@ -247,8 +278,9 @@ margin-bottom: 20px;
     width: 100%;
     height: 1px;
     background: rgb(255 255 255 / 70%);
+    /* background: #be9c28; */
     position: absolute;
-    bottom: -8px;
+    bottom: -5px;
     animation: 1s ease-out 0s 1 slideIn;  }
   @keyframes slideIn {
     0% {
@@ -260,7 +292,7 @@ width: 0px;
   }
   .videoTextBody {
   font-size: calc(13px + 0.290625vw);
-  margin-bottom: 30px;
+  margin-bottom: 3em;
   font-family: 'Lato', sans-serif;
 
   }
@@ -296,7 +328,7 @@ width: 0px;
   }
   .CMScontainer {
     width: 100%;
-    height: 125px;
+    height: auto;
     background-color: #110f0f;
   }
   .CMStitle {
@@ -308,17 +340,34 @@ width: 0px;
     font-family: 'Poppins';
     color: white;
     font-size: .8rem;
+      width: 90%;
+      margin: 0 auto;
   }
   .CMSflex {
-    width: 95%;
+    width: 100vw;
     margin: 0 auto;
+    height: auto;
     display: flex;
     flex-flow: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
+    padding: 20px 0;
+    animation-name: uspAnimation;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  @keyframes uspAnimation {
+    0% {
+        margin-left: 0%;
+    }
+    100% {
+        margin-left: calc(-125vw);
+    }
   }
   .CMSchild {
-    width: 25%;
+    min-width: 20%;
+    margin-right: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -328,3 +377,8 @@ width: 0px;
     width: 91%;
     }
 }
+
+/* .fixed {
+  position: fixed !important;
+  z-index: 10;
+} */
