--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
+    overflow-x: hidden !important;
 }
 
+@media screen and (max-width: 768px) {
+  html,body {
+        overflow-x: hidden !important;
+  }
+}
