--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -277,3 +277,8 @@ width: fit-content;
     -1px 0 28px 0 rgba(34, 33, 81, 0.01),
     54px 54px 28px -10px rgba(34, 33, 81, 0.15);
 }
+/* #__next > div > div.Services_mainContainer___hHnA > div.Services_servicesMain__2vyfK > div:nth-child(1) {
+  animation-name: slideUp;
+  animation-duration: 1s;
+  ani
+} */
