--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -66,9 +66,23 @@ width: fit-content;
     justify-content: space-around;
     flex-wrap: wrap;
 }
-.servicesMainCard {
-    height: 290px;
+.servicesMain a {
+  height: auto;
     width: 32%;
+    padding-top: 50px;
+    transition: transform 1s;
+    text-decoration: none;
+    color: black;
+}
+.servicesMainCard {
+    width: 100%;
+}
+
+  .servicesMain a:hover {
+border: 1px solid grey;
+box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+border-radius: 15px;
+transform: translateY(-20px);
 }
 @media screen and (max-width: 768px) {
   .servicesMainCard {
@@ -120,7 +134,7 @@ width: fit-content;
     filter: brightness(0) invert(1);
 }
 .cardBody {
-    height: 150px;
+    height: 100px;
     width: 95%;
     margin: 0 auto;
     text-align: center;
@@ -276,6 +290,9 @@ width: fit-content;
     1px 1px 0 1px black,
     -1px 0 28px 0 rgba(34, 33, 81, 0.01),
     54px 54px 28px -10px rgba(34, 33, 81, 0.15);
+}
+#__next > div > div.Services_mainContainer___hHnA > div.Services_servicesMain__2vyfK > div:nth-child(4) > div.Services_titleSection___ll5F > img {
+  padding-left: 5px;
 }
 /* #__next > div > div.Services_mainContainer___hHnA > div.Services_servicesMain__2vyfK > div:nth-child(1) {
   animation-name: slideUp;
