--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,14 +22,17 @@
 }
 .videoOverlay {
   position: absolute;
-  height: 75%;
-  width: 75%;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
   display: flex;
   color: white;
+  top: -5%;
 }
 .videoTextMain{
   width: 70%;
-  height: 100%;
+  height: auto;
   display: flex;
   flex-flow: column;
   align-items: self-start;
