--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -239,6 +239,7 @@ margin-bottom: 2.5em;
     height: 100%;
     width: 100%;
   }
+
   .titleMain div:first-child {
     margin-bottom: 5px !important;
   }
@@ -252,14 +253,14 @@ margin-bottom: 2.5em;
     color: white;
   }
   .videoTextMain{
-    width: 80%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-flow: column;
     align-items: self-start;
   }
   .videoTextMain div:first-child {
-    font-size: calc(23px + 2.5vw);
+    font-size: calc(23px + 2.3vw);
     margin-top: 20px;
     margin-bottom: 10px;
     text-align: left;
@@ -269,7 +270,7 @@ margin-bottom: 2.5em;
     font-weight: light;
   }
   .videoTextMain div span {
-    font-size: calc(23px + 2.5vw);
+    font-size: calc(23px + 2.3vw);
     text-align: center;
     /* font-family: 'Roboto Slab', serif; */
     font-family: 'Montserrat', sans-serif;
@@ -304,7 +305,6 @@ width: 0px;
     background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));  border-radius: 6px;
     box-shadow: rgba(0, 0, 0, 0.1) 0 2px 4px;
     /* color: #FFFFFF; */
-    color: black;
     cursor: pointer;
     display: inline-block;
     font-family: 'Lato', sans-serif;
@@ -327,7 +327,10 @@ width: 0px;
     transition:  .4s;
     font-size: 15px;
     font-weight: bold;
-    
+  }
+  .button42 a {
+    color: black;
+    text-decoration: none;
   }
   .CMScontainer {
     width: 100%;
