--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -159,10 +159,10 @@ height: 1px;
     .mobileIconContainer {
         position: relative;
         width: 40px;
-
+      margin-left: 10px;
     }
     .mobileNavItemsActive {
-        width: 150px;
+        width: 50%;
         transition: width 1s;
         height: 100vh;
         /* background-color: #231f20; */
@@ -209,7 +209,7 @@ height: 1px;
         margin-top: 20px;
         background-color: white;
         z-index: 50;
-        transition-delay: .5s;
+        /* transition-delay: .5s; */
         transition: 1s;
       }
       .activeMenuLine3 {
@@ -220,7 +220,7 @@ height: 1px;
         margin-top: 10px;
         background-color: white;
         z-index: 50;
-        transition-delay: .5s;
+        /* transition-delay: .5s; */
         transition: 1s;
       }
       .activeMenuLine2 {
@@ -229,8 +229,54 @@ height: 1px;
         margin-top: 10px;
         background-color: white;
         z-index: 50;
-        transition-delay: .5s;
         transition: 1s;
         display: none;
       }
+      .navItemsMobile ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        height: 50vh;
+        margin-top: 20px;
+      }
+      .navItemsMobile ul li {
+        list-style: none;
+        font-family: 'Montserrat', sans-serif;
+        text-align: center;
+        padding: 30px 0;
+    }
+    .navItemsMobile ul li a {
+color: white;
+      text-decoration: none;
+      font-family: 'Montserrat', sans-serif;
+  }
+  .navItemsMobile ul li:last-child{
+    margin-top: 30px;
+    margin-left: 18px;
+    margin-right: 18px;
+    border: 1px solid hsl(46deg 73% 36%);
+    padding: 10px 28px;
+    background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));    color: black;
+    border-radius: 26px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 500;
+    font-size: 17px;
+    transition: .4s;
+    
+}
+.navItemsMobile ul li:last-child:hover {
+    color: black;
+    transform:
+      translate3d(0px, -3px, 0px)
+      /* rotateX(51deg) */
+      /* rotateZ(43deg) */
+      ;
+    box-shadow:
+      1px 1px 0 1px black,
+      -1px 0 28px 0 rgba(34, 33, 81, 0.01),
+      54px 54px 28px -10px rgba(34, 33, 81, 0.15);
+  }
+  .navItemsMobile ul li:last-child a  {
+    color: black;
+  }
 }
