--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -85,9 +85,16 @@ border-radius: 15px;
 transform: translateY(-20px);
 }
 @media screen and (max-width: 768px) {
+  .servicesMain {
+    display: unset; 
+     justify-content: unset; 
+     flex-wrap: unset;
+  }
+  .servicesMain a {
+    width: 50%;
+  }
   .servicesMainCard {
-    width: 45%;
-    margin-bottom: 25px;
+    width: 100%;
   }
   .servicesMainCard img { 
     z-index: 2;
@@ -126,7 +133,11 @@ transform: translateY(-20px);
 }
 .cardTitle {
   text-align: center;
-  margin: 20px 0;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
   font-family: 'Poppins';
 }
 .titleSection img {
