--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -176,6 +176,9 @@ height: 1px;
         /* background-color: #231f20; */
         background-color: #110f0f;
     }
+    .navItemsMobileInactive {
+      display: none;
+    }
     .menuLine1 {
         margin-top: 10px;
         width: 90%;
@@ -232,25 +235,25 @@ height: 1px;
         transition: 1s;
         display: none;
       }
-      .navItemsMobile ul {
+      .navItemsMobileActive ul {
         list-style: none;
         margin: 0;
         padding: 0;
         height: 50vh;
         margin-top: 20px;
       }
-      .navItemsMobile ul li {
+      .navItemsMobileActive ul li {
         list-style: none;
         font-family: 'Montserrat', sans-serif;
         text-align: center;
         padding: 30px 0;
     }
-    .navItemsMobile ul li a {
+    .navItemsMobileActive ul li a {
 color: white;
       text-decoration: none;
       font-family: 'Montserrat', sans-serif;
   }
-  .navItemsMobile ul li:last-child{
+  .navItemsMobileActive ul li:last-child{
     margin-top: 30px;
     margin-left: 18px;
     margin-right: 18px;
@@ -264,7 +267,7 @@ color: white;
     transition: .4s;
     
 }
-.navItemsMobile ul li:last-child:hover {
+.navItemsMobileActive ul li:last-child:hover {
     color: black;
     transform:
       translate3d(0px, -3px, 0px)
@@ -276,7 +279,7 @@ color: white;
       -1px 0 28px 0 rgba(34, 33, 81, 0.01),
       54px 54px 28px -10px rgba(34, 33, 81, 0.15);
   }
-  .navItemsMobile ul li:last-child a  {
+  .navItemsMobileActive ul li:last-child a  {
     color: black;
   }
 }
