content pages additions and minor bug fixes

--- a/components/Contact/Contact2.module.css
+++ b/components/Contact/Contact2.module.css
@@ -15,6 +15,11 @@ background-repeat: no-repeat;
 background-position: center;
 position: relative;
 }
+@media screen and (max-width: 468px) {
+    .containerForm {
+        width: 100% !important;
+    }
+}
 .containerForm {
     display: flex;
     flex-flow: column;
