--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -60,3 +60,69 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
     box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
 }
 }
+
+@media screen and (max-width: 768px) {
+    .mainContainer {
+        /* margin-top: 200px; */
+    height: 200px;
+    /* background-color: white; */
+    background-color: #110f0f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.contactMeBox {
+height: 75px;
+width: 90%;
+background-image: linear-gradient(-180deg, hsl(46deg 68% 53%), hsl(46deg 72% 37%));
+/* background-image: linear-gradient(-180deg, hsl(46deg 81% 33%), hsl(46deg 90% 34%)); */
+border: 1px solid hsl(46deg 73% 36%);
+margin: 0 auto;
+/* margin-top: -5em; */
+border-radius: 20px;
+display: flex;
+align-items: center;
+justify-content: space-around;
+z-index: 10;
+box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.contactMeBox div,
+.contactMeBox h1 {
+    min-width: 33.3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.contactMeBox div {
+    font-weight: lighter;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+        font-size: 15px;
+        text-align: center;
+        font-weight: 400;
+
+}
+.contactMeBox h1 {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+        color: black;
+    font-size: 1.3em;
+    text-align: center;
+    display: none;
+}
+
+.button {
+    padding: 11px 14px;
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    /* border: 1px solid black; */
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    border-color: #ad8d20;
+    border-radius: 31px;
+    box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 6px 0px inset;
+}
+}
