--- a/components/Testimonial/Testimonial.module.css
+++ b/components/Testimonial/Testimonial.module.css
@@ -20,6 +20,11 @@ padding-left: 3rem;
     margin: 0 auto;
     margin-bottom: 20px;
 }
+@media screen and (max-width: 768px) {
+    .mainText {
+        font-size: 1rem !important;
+    }
+}
 .mainText {
     font-family: 'Montserrat', sans-serif;
     font-size: 2rem;
