--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -32,6 +32,7 @@ box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 .contactMeBox div {
     font-weight: lighter;
