--- a/components/Projects/Projects.module.css
+++ b/components/Projects/Projects.module.css
@@ -51,11 +51,14 @@
     flex-wrap: wrap;
 }
 .card {
-    width: 32%;
+    border-radius: 20px;
+    width: calc(100% / 4.3);
     height: 250px;
     margin: 0 auto;
     background-color: grey;
     margin-bottom: 20px;
+    display: flex;
+    flex-flow: column;
 }
 @media screen and (max-width: 768px) {
     .card {
@@ -82,4 +85,31 @@
 }
 .svg {
     filter: brightness(0) invert(1);
+}
+.fancy_button_container {
+height: 15%;
+width: 100%;
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: #1f2125;
+border-radius: 20px 20px 0 0;
+}
+.fancy_button_container img {
+    width: 30px;
+}
+.image_container {
+    height: 40%;
+    width: 100%;
+}
+.image_container img {
+    width: 100%;
+    height: 100%;
+}
+.text_container {
+    width: 100%;
+    height: 45%;
+    background-color: #1f2125;
+    color: white;
+    border-radius: 0 0 20px 20px;
 }
