--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -165,6 +165,7 @@ margin-bottom: 2.5em;
     width: 100%;
     height: 200px;
     background-color: #110f0f;
+    padding-bottom: 30px;
   }
   .CMStitle {
     height: 75px;
@@ -174,6 +175,10 @@ margin-bottom: 2.5em;
     font-family: 'Poppins';
     color: white;
     font-size: 1rem;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center;
+    border-bottom: 1px solid grey;
   }
   .CMSflex {
     width: 100vw;
@@ -185,16 +190,18 @@ margin-bottom: 2.5em;
     justify-content: space-around;
     align-items: center;
     animation-name: uspAnimation;
-    animation-duration: 20s;
+    animation-duration: 23s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
+    border-bottom: 1px solid grey;
+
   }
   @keyframes uspAnimation {
     0% {
         margin-left: 0%;
     }
     100% {
-        margin-left: calc(-75vw);
+        margin-left: calc(-90vw);
     }
 }
   .CMSchild {
@@ -205,7 +212,7 @@ margin-bottom: 2.5em;
   }
   .CMSchild img {
     filter: brightness(0) invert(1);
-    width: calc(10px + 10vw);
+    width: calc(25px + 10vw);
   }
   .contentBreakContainer {
     background-color: grey;
@@ -372,7 +379,7 @@ width: 0px;
     }
   }
   .CMSchild {
-    min-width: 20%;
+    min-width: 25%;
     margin-right: 20px;
     display: flex;
     justify-content: center;
