--- a/components/Services/Services.module.css
+++ b/components/Services/Services.module.css
@@ -28,7 +28,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2.2rem;
+    /* font-size: 2.2rem; */
+    font-weight: 500;
+    font-size: 39px;
     /* font-weight: bolder; */
 color: black;
 /* font-family: 'Roboto Slab', serif; */
