--- a/components/Projects/Projects.module.css
+++ b/components/Projects/Projects.module.css
@@ -9,7 +9,7 @@
     padding-bottom: 100px;
     padding-top: 40px;
 
-    border-bottom: 1px ridge #cfcece;
+    border-bottom: 0.1px solid grey;
 }
 .largeColon {
     font-size: 100px;
@@ -44,8 +44,9 @@
     flex-wrap: wrap;
 }
 .card {
+    position: relative;
     border-radius: 20px;
-    width: calc(100% / 4.3);
+    width: calc(100% / 3.1);
     height: 300px;
     margin: 0 auto;
     background-color: grey;
@@ -53,10 +54,17 @@
     display: flex;
     flex-flow: column;
     transition: 1s;
+    overflow: hidden;
+}
+@media screen and (max-width: 1000px) {
+    .card {
+        width: 48%;
+    }
+
 }
 @media screen and (max-width: 768px) {
     .card {
-        width: 45%;
+        width: 48%;
     }
 
 }
@@ -90,7 +98,7 @@ border-radius: 20px 20px 0 0;
     width: 20px;
 }
 .image_container {
-    height: 40%;
+    height: 85%;
     width: 100%;
 }
 .image_container img {
@@ -98,23 +106,37 @@ border-radius: 20px 20px 0 0;
     height: 100%;
 }
 .text_container {
+    position: relative;
     width: 100%;
-    height: 45%;
-    background-color: hwb(0deg 15% 85%);
-    border-radius: 0 0 20px 20px;
+    height: 100%;
+    border-radius: 20px 20px 20px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: black;
+  opacity: 0;
+  position: absolute;
+  top: 0%;
+  height: 100%;
+  width: 100%;
+  transition: 1s;
 }
-.text_container > div {
+#text {
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: white;
-    font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 300;
     transition: 1s;
-    text-align: center;
-    opacity: 0 ;
-
+    font-size: 20px;
+    font-family: poppins;
+}
+.card:hover .text_container,
+.card:hover #text {
+    opacity: 0.82;
 }
 
 .card:hover #text {
