--- a/components/Testimonial/Testimonial.module.css
+++ b/components/Testimonial/Testimonial.module.css
@@ -1,10 +1,10 @@
 .mainContainer {
 height: auto;
 width: 100vw;
-padding-bottom: 100px;
+padding-bottom: 60px;
 padding-top: 100px;
 background-color: #eeece6;
-}
+border-bottom: 0.1px solid grey;}
 .mainContainer div {
     width: auto;
 padding-right: 3rem;
