--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -359,6 +359,10 @@ width: 0px;
       width: 90%;
       margin: 0 auto;
   }
+  .CMStitle > div {
+    line-height: 20px;
+    padding-top: 10px;
+  }
   .CMSflex {
     width: 100vw;
     margin: 0 auto;
